# RAG-MEDICAL-SYSTEM

./: .env  .gitignore  Jenkinsfile  README.md  docker-compose.yml  hugging-key.txt  pyproject.toml
app/: application.py
app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
